<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">webtv_nome</string>
    <string name="tag_line"></string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="text_no_item">No item available.</string>
     <string name="shareapp_msg">MSG_SHARE</string>
    <string name="select_player">Player</string>
    <string name="within_app">MSG_BTN_PLAYER1</string>
    <string name="external_app">MSG_BTN_PLAYER2</string>

    <string name="facebook_id">webtv_facebook</string>
    <string name="twitter_id">webtv_twitter</string>
    <string name="site_id">webtv_site</string>

    <!-- Channel url -->
    <string name="channel_name">MSG_BTN_PLAYER</string>
    <string name="channel_url">webtv_source_url</string>
    <string name="channel_description">webtv_descricao</string>

    <!--if you want rtl change value of isRTL to true else false-->
    <string name="isRTL">false</string>

    <!-- admob id -->
    <string name="admob_banner_id"></string> <!-- Change AdMob Banner Id -->
    <string name="admob_interstitial_id"></string> <!-- Change AdMob Interstitial Id -->
    <string name="admob_publisher_id"></string>

    <string name="play_more_apps">https://play.google.com/store/apps/details?id=webtv_package</string>
    <string name="privacy_gdpr_url">http://apptific.com/PlayStore/Privacy-Policy.html</string>
    <string name="admob_app_id"></string>

     <!--Drawer Menu -->
    <string name="menu_home">Web Tv</string>
    <string name="menu_face">Facebook</string>
    <string name="menu_twit">Twitter</string>
    <string name="menu_site">Site</string>
    <string name="menu_rate">MSG_BTN_RATE</string>
    <string name="menu_more">Google Play</string>
    <string name="menu_share">MSG_BTN_SHARE</string>
    <string name="menu_about">App</string>
    <string name="menu_privacy">Privacy</string>

    <!-- about us -->
    <string name="version">App</string>
    <string name="author">Author</string>
    <string name="company">Company</string>
    <string name="email">Email</string>
    <string name="website">Website</string>
    <string name="contact">Contact</string>
    <string name="about"></string>

    <string name="version_name">webtv_app_versao</string>
    <string name="company_name">webtv_nome</string>
    <string name="email_id"></string>
    <string name="website_name">webtv_site</string>
    <string name="contact_no">webtv_whatsapp</string>
    <string name="about_desc">webtv_descricao</string>
    <string name="description">MSG_DESCRICAO</string>
    <string name="internet_connection_error">Internet Connection Error</string>
    <string name="please_connect_to_working_internet_connection">No internet</string>

    <string name="casty_introduction_text">Conectar Chromecast</string>

    <string name="dialog_ok">OK</string>
    <string name="wrong">something went to wrong please try again later</string>
    <string name="default_notification_channel_id">webtv_nome</string>

    <string name="exo_msg_oops">Ooops!</string>
    <string name="exo_msg_failed">Streaming offline!</string>
    <string name="exo_option_retry">Tentar de novo/retry</string>
    <string name="exo_option_no">No</string>

</resources>