<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_fb"
            android:icon="@drawable/ic_fb"
            android:checkable="false"
            android:title="@string/menu_face" />
        <item
            android:id="@+id/nav_twit"
            android:icon="@drawable/ic_twitter"
            android:checkable="false"
            android:title="@string/menu_twit" />
        <item
            android:id="@+id/nav_insta"
            android:icon="@drawable/ic_insta"
            android:checkable="false"
            android:title="@string/menu_site" />
        <item
            android:id="@+id/nav_rate"
            android:icon="@drawable/ic_rate"
            android:checkable="false"
            android:title="@string/menu_rate" />

        <item
            android:id="@+id/nav_more"
            android:icon="@drawable/ic_more"
            android:checkable="false"
            android:title="@string/menu_more" />
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_share"
            android:checkable="false"
            android:title="@string/menu_share" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_about"
            android:checkable="false"
            android:title="@string/menu_about" />
        <item
            android:id="@+id/nav_privacy"
            android:icon="@drawable/ic_privacy"
            android:checkable="false"
            android:title="@string/menu_privacy" />

    </group>





</menu>
