<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout_select_dialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/transparent">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        card_view:cardBackgroundColor="@color/white"
        card_view:cardCornerRadius="5dp"
        card_view:cardUseCompatPadding="false"
        card_view:elevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/toolbar_bg">

                <TextView
                    fontPath="fonts/Montserrat-SemiBold_0.otf"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="2dp"
                    android:layout_marginStart="2dp"
                    android:layout_marginTop="2dp"
                    android:gravity="center|start"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:text="@string/select_player"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    tools:ignore="MissingPrefix" />

                <ImageView
                    android:id="@+id/image_close"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="8dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_close" />
            </RelativeLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/btn_app"
                    fontPath="fonts/Montserrat-SemiBold_0.otf"
                    android:layout_width="220dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/btn_bg_within_app"
                    android:gravity="center"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:text="@string/within_app"
                    android:textColor="@color/textView_select_dialog"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:ignore="MissingPrefix" />

                <TextView
                    android:id="@+id/btn_external"
                    fontPath="fonts/Montserrat-SemiBold_0.otf"
                    android:layout_width="220dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/btn_bg_external_app_app"
                    android:gravity="center"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:text="@string/external_app"
                    android:textColor="@color/textView_select_dialog"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:ignore="MissingPrefix" />

            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>