<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/app_bg">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="8dp"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/image_home_fragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/app_name"
                    android:scaleType="fitXY"
                    android:src="@drawable/single_tv_img" />

                <View
                    android:id="@+id/view_home_fragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/image_thum_textview_background" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:alpha="0.9"
                    android:padding="5dp">

                    <TextView
                        android:id="@+id/text_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="5dp"
                        android:layout_marginStart="8dp"
                        android:layout_toStartOf="@+id/imageView_play_home_fragment"
                        android:ellipsize="end"
                        android:gravity="start|center_vertical"
                        android:maxLines="1"
                        android:text="@string/channel_name"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                    <ImageView
                        android:id="@+id/imageView_play_home_fragment"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_alignParentEnd="true"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/ic_play" />

                </RelativeLayout>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp">

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    card_view:cardBackgroundColor="@color/white"
                    card_view:cardCornerRadius="5dp"
                    card_view:cardUseCompatPadding="false"
                    card_view:elevation="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="8dp"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="20dp"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="80dp"
                                android:layout_height="wrap_content"
                                android:contentDescription="@string/app_name"
                                android:src="@drawable/line" />

                            <TextView
                                fontPath="fonts/Montserrat-SemiBold_0.otf"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="10dp"
                                android:layout_marginRight="10dp"
                                android:text="@string/description"
                                android:textColor="@color/textView_description_home_fragment"
                                android:textSize="18sp"
                                android:textStyle="bold"
                                tools:ignore="MissingPrefix" />

                            <ImageView
                                android:layout_width="80dp"
                                android:layout_height="wrap_content"
                                android:contentDescription="@string/app_name"
                                android:src="@drawable/line" />

                        </LinearLayout>

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="8dp"
                            android:layout_marginRight="8dp"
                            android:layout_marginTop="8dp"
                            android:contentDescription="@string/app_name"
                            android:src="@drawable/line_home" />

                        <WebView
                            android:id="@+id/desweb"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:background="@color/white" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>